--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> NMemeChat</title>
+    <script data-ad-client="ca-pub-6701848882823137" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Google fonts. -->
     <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
     <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'/>
