--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Google fonts. -->
     <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
     <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'/>
+    <link rel="shortcut icon" type="image/x-icon" href="NMemeChat.png"/>
     <!-- Use font awesome icons. -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- Use firebase app and database. -->
